--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/jet0202/Empire_construction#readme",
   "dependencies": {
-    "aos": "^3.0.0-beta.6"
+    "aos": "^3.0.0-beta.6",
+    "lg-thumbnail.js": "^1.2.0",
+    "lightgallery.js": "^1.4.0"
   }
 }
